--- a/style.css
+++ b/style.css
@@ -17,10 +17,11 @@ a{
     padding: 10px;
     width: 10em;
     height: 2em;
-       line-height:2em;
+    line-height:2em;
     margin: 0 auto;
     margin-top: 15px;
     border-radius: 6px;
+    text-decoration: none;
 }
 
 a:hover {
